separate docker for mock data, thread for training
